--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Drag and Drop</title>
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h2 id="instruction"></h2>
     <h2 id="message"></h2>
     <div id="rect" class="rect">
-        <h2>Drop cercle here!</h2>
+        <h2>Drop circle here!</h2>
     </div>
     <div id="cercle" class="cercle" draggable="true">Drag me!</div>
 </body>
