--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <h1>Drag the circle into the rectangle</h1>
     <h2 id="message"></h2>
-    <div id="rect" class="rect">
-        <h2>Drop circle here!</h2>
-    </div>
+    <div id="rect" class="rect"></div>
     <div id="cercle" class="cercle" draggable="true">Drag me!</div>
 </body>
 </html>
